# poker-hand-analyzer

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
native/: equity.cpp  evaluator.hpp
scripts/: add_nick_glyphs.py  tune_value_thresholds.py
src/poker_analyzer/: __init__.py  __main__.py  _equity.pyi  cli.py  config.py  debug.py  log.py  pipeline.py
src/poker_analyzer/engine/: __init__.py  advice.py  advisor.py  equity.py  preflop.py  range_model.py  ranges.py  sim.py  sizing.py  state.py  stats.py  texture.py
src/poker_analyzer/identity/: __init__.py  players.py
src/poker_analyzer/parsing/: __init__.py  events.py  segmentation.py
src/poker_analyzer/vision/: __init__.py  crop.py  glyphs.py  matching.py  recognition.py  templates.py  types.py
tests/: test_advisor.py  test_config.py  test_equity.py  test_events.py  test_glyphs.py  test_matching.py  test_pipeline.py  test_players.py  test_preflop.py  test_range_model.py  test_ranges.py  test_recognition.py  test_sizing.py  test_state.py  test_stats.py  test_texture.py  test_value_ev.py
